# ddns

./: .copier-answers.yml  .cz.toml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ORIG_README.md  README.md  REUSE.toml  SECURITY.md  licenserc.toml  mkdocs.yml  pyproject.toml  scratch.md
.config/: licenserc.toml  lychee.toml  markdown-header.toml  release-please-config.json  rumdl.toml  typos.toml  yamllint.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: approve-bot-prs.yml  ci.yml  docs.yml  label-hygiene.yml  link-check.yml  main.yml  pr.yml  pre-commit.yaml  publish.yml  python.yaml
.serena/: project.yml
.ship/: worktree-chore+adopt-copier-template.md
docs/: concepts.md  configuration.md  getting-started.md  index.md  roadmap.md  troubleshooting.md
docs/commands/: index.md  ip-resolver-config.md  logs.md  manage.md  show-info.md  un-manage.md  update-ips.md
docs/includes/: install.md
docs/stylesheets/: extra.css
junit/: test-results.xml
overrides/: 404.html
scripts/: check_copier_src_path.py  refresh-binary-checksums.sh
src/ddns_digital_ocean/: __init__.py  api_key_helpers.py  args.py  constants.py  database.py  ddns.py  do_api.py  domains.py  exceptions.py  info.py  ip.py  logs.py  manage.py  subdomains.py  tlds.py
src/digital_ocean_dynamic_dns/: __init__.py  api_key_helpers.py  args.py  constants.py  database.py  ddns.py  do_api.py  domains.py  exceptions.py  info.py  ip.py  logs.py  manage.py  subdomains.py
tests/: __init__.py  conftest.py  test_api_key_helpers.py  test_constants.py  test_ddns.py  test_do_api.py  test_domains.py  test_info.py  test_ip.py  test_manage.py  test_smoke.py  test_subdomains.py  test_tlds.py
tests/do_api/: __init__.py  test_a_records.py  test_domains.py
tests/domains/: __init__.py  conftest.py  test_manage_domains.py  test_show_domains.py  test_unmanage_domains.py
tests/subdomains/: __init__.py  conftest.py  test_list_subdomains.py  test_manage_subdomain.py  test_un_manage_subdomain.py  test_update_managed_subdomains.py
