# ddns-digital-ocean
# Copyright (C) 2023  Tyler Nivin <tyler@nivin.tech>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software
#   and associated documentation files (the "Software"), to deal in the Software
#   without restriction, including without limitation the rights to use, copy, modify, merge,
#   publish, distribute, sublicense, and/or sell copies of the Software,
#   and to permit persons to whom the Software is furnished to do so,
#   subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
#   in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
#   EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
#   DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
#   ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
#   OR OTHER DEALINGS IN THE SOFTWARE.
#
# SPDX-License-Identifier: MIT
# Copyright 2023 - 2024, Tyler Nivin <tyler@nivin.tech>
#   and the ddns-digital-ocean contributors

[project]
name = "ddns_digital_ocean"
version = "0.4.0"
description = "Python-based CLI tool for managing dynamic dns."
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",

    # Topics
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = ["rich>=13.8.0", "requests>=2.32.3", "more-itertools>=10.4.0"]

[project.urls]
Repository = "https://github.com/nivintw/ddns"
Issues = "https://github.com/nivintw/ddns/issues"

[project.scripts]
do_ddns = 'ddns_digital_ocean.ddns:run'


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
    "pytest-check>=2.3.1",
    "pytest-mock>=3.14.0",
    "responses>=0.25.3",
]

[tool.ruff]
# Uncomment to over-ride the line-length used by ruff.
# Allowing line-length 100 for now due to prior code.
line-length = 100

[tool.ruff.lint]
# Configure which ruff rules to enable.
select = [
    "E",   # pycodestyle - errors
    "W",   # pycodestyle - warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # Ruff-specific rules
    "S",   # Flake8-bandit
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least these four should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
