# SPDX-FileCopyrightText: © 2023 Tyler Nivin
# SPDX-License-Identifier: MIT

[project]
name = "digital-ocean-dynamic-dns"
version = "1.3.7"
requires-python = ">=3.12"
description = "Python-based CLI tool for managing dynamic dns with Digital Ocean."
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = ["rich>=13.8.0", "requests>=2.32.3", "more-itertools>=10.4.0"]

[project.scripts]
do_ddns = "digital_ocean_dynamic_dns.ddns:run"

[project.urls]
Repository = "https://github.com/nivintw/ddns"
Issues = "https://github.com/nivintw/ddns/issues"

[dependency-groups]
# The ruff floor must support the rendered `target-version = "py312"`: py314 needs ruff>=0.12.
# Bump this floor when raising python_version past what the current floor supports.
# ty is pre-1.0 and evolves quickly, so ">=0.0.1" is a permissive floor, not a meaningful one —
# Renovate keeps the resolved version current regardless.
dev = [
  "ruff>=0.12",
  "ty>=0.0.1",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-check>=2.3.1",
  "pytest-mock>=3.14.0",
  "responses>=0.25.3",
  "ipython>=8.27.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_ocean_dynamic_dns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate — measure the package, fail under 80%. Tune per project.
addopts = "--cov=digital_ocean_dynamic_dns --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
# Measure branch coverage in addition to statement coverage.
branch = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are held to the same bar as src, with one exception: pytest *is* the `assert`
# statement (it rewrites them), so S101 can't apply. Everything else — annotations,
# docstrings, naming, unused args — is fixed in the tests, not ignored.
"tests/**" = ["S101"]
